--- a/semesterProjectSecondItterationGUI/src/main/resources/hello-view.fxml
+++ b/semesterProjectSecondItterationGUI/src/main/resources/hello-view.fxml
@@ -15,7 +15,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane maxHeight="738.0" maxWidth="1055.0" minHeight="620.0" minWidth="560.0" prefHeight="738.0" prefWidth="1055.0" style="-fx-background-color: black;" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="presentation.GUIHandler">
+<AnchorPane maxHeight="738.0" maxWidth="1055.0" minHeight="620.0" minWidth="560.0" prefHeight="738.0" prefWidth="1055.0" style="-fx-background-color: black;" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="GUI.GUIHandler">
    <AnchorPane fx:id="titleScreen" focusTraversable="true" layoutX="238.0" layoutY="225.0" prefHeight="200.0" prefWidth="200.0">
       <children>
          <VBox focusTraversable="true" style="-fx-background-color: White;">
@@ -64,7 +64,7 @@
       <children>
          <ImageView fx:id="article1" disable="true" fitHeight="30.0" fitWidth="30.0" pickOnBounds="true" preserveRatio="true" visible="false">
             <image>
-               <Image url="@sindahl.jpg" />
+               <Image url="@images/sindahl.jpg" />
             </image>
          </ImageView>
       </children>
